change priorityList to singleton, update storage.set method

--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -83,7 +83,7 @@ public class PriorityTaskList {
 public class Searcher {
 	
 	private static Searcher searcher = null;
-	public Searcher(){
+	private Searcher(){
 	}
 	
 	public static Searcher getInstance(){
@@ -153,7 +153,7 @@ public class Searcher {
 		Task target;
 		for(i = 0; i < sample.size(); i++){
 		    target = sample.get(i);
-			if(target.getPriority() != priority){
+			if((target.getPriority() == null) || (target.getPriority() != priority)){
 		    	sample.remove(i);
 		    	i--;
 		    }					
@@ -239,7 +239,7 @@ public class SystemTest {
 	public void test() {
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("add meeting 9-Oct");
-		LogicClass lg = LogicClass.getInstance(null);
+		LogicClass lg = LogicClass.getInstance();
 		lg.executeCommand(cmd);
 		int size = LogicClass.getTaskList().size();
 		assertEquals(LogicClass.getTaskList().get(0).getName(), "meeting");
@@ -263,7 +263,7 @@ public class TimeLine {
 	private ArrayList<Task> floatTimeLine;
 	private static TimeLine timeline = null;
 	
-	public TimeLine(){
+	private TimeLine(){
 		this.startTimeLine = new ArrayList<Task>();
 		this.endTimeLine = new ArrayList<Task>();
 		this.floatTimeLine = new ArrayList<Task>();
@@ -439,8 +439,10 @@ public class SetPathTest {
 	@Test
 	public void test() {
 		ArrayList<Task> a = Storage.getInstance().read();
-		Storage.getInstance().setPath("Task_Bomber_.txt");
-		assertEquals(Storage.getInstance().read(), a);
+		Storage.getInstance().setPath("TaskBomber.txt");
+		System.out.println(a);
+		System.out.println(Storage.getInstance().read());
+		assertEquals(Storage.getInstance().read().get(2).getName(), a.get(2).getName());
 		
 	}
 
@@ -454,8 +456,9 @@ public class Storage {
 	private static File userFile;
 	private static Storage storage = null;
 	
-	public Storage(){
+	private Storage(){
 	}
+	
 	public static Storage getInstance(){
 		if(storage == null){
 			storage = new Storage();
@@ -570,9 +573,10 @@ public class Storage {
 		try{
 			File newPath = new File(path);
 			newPath.createNewFile();
-			write(read());
+			ArrayList<Task> content = read();
 			userFile.delete();
 			userFile = newPath;
+			write(content);
 			FileWriter fw = new FileWriter(filePath, false);
 			BufferedWriter buff = new BufferedWriter(fw);
 			buff.write(path);
@@ -584,6 +588,5 @@ public class Storage {
 			return false;
 		}
 	}
-
 }
 ```
