update storage to support "mark"

--- a/collated/A0133915H.md
+++ b/collated/A0133915H.md
@@ -3,7 +3,6 @@
 ``` java
 public class MainApp extends Application {
 	private Stage primaryStage;
-	private BorderPane rootLayout;
 
 	private static ObservableList<Task> taskList;
 	private static ObservableList<String> todayTaskList;
@@ -13,12 +12,11 @@ public class MainApp extends Application {
 	public MainApp() {
 	}
 
-	 
 	public ObservableList<Task> getTaskData() {
 		ArrayList<Task> tasks = LogicClass.getTaskList();
 		for (int i = 0; i < tasks.size(); i++) {
 			System.out.println(tasks.get(i).getName());
-		} 
+		}
 		for (int i = 0; i < tasks.size(); i++) {
 			tasks.get(i).setTaskNumber(i + 1);
 		}
@@ -26,73 +24,92 @@ public class MainApp extends Application {
 		return taskList;
 	}
 
-	 
-	public ObservableList<String> getTodayTasks(){
+	public ObservableList<String> getTodayTasks() {
 		ArrayList<String> todayTasks = LogicClass.getTodayTasks();
 		todayTaskList = FXCollections.observableArrayList(todayTasks);
 		return todayTaskList;
 	}
-	
+
 	@Override
 	public void start(Stage primaryStage) {
 		try {
+			
+			Button btn = new Button();
+	        btn.setText("Help");
+	        btn.setOnAction(new EventHandler<ActionEvent>() {
+	            @Override
+	            public void handle(ActionEvent event) {
+	                 
+			        Image image = new Image("Basic.PNG");
+			        ImageView imageView = new ImageView();
+			        imageView.setImage(image);
+	                imageView.setPreserveRatio(true);
+	                
+	                ScrollPane secondaryLayout = new ScrollPane();
+	                secondaryLayout.setContent(imageView);
+	                 
+	                Scene secondScene = new Scene(secondaryLayout, 750, 700);
+	                Stage secondStage = new Stage();
+	                secondStage.setTitle("Help");
+	                secondStage.setScene(secondScene);
+	                 
+	                //Set position of second window, related to primary window.
+	                secondStage.setX(primaryStage.getX() + 250);
+	                secondStage.setY(primaryStage.getY() + 100);
+	  
+	                secondStage.show();
+	            }
+	        });
+	        
+	        BorderPane rootLayout = new BorderPane();
+	        
+	        rootLayout.setTop(btn);
 			this.primaryStage = primaryStage;
 			this.primaryStage.setTitle("TaskBomber");
-
-			initRootLayout();
-			logger.log(Level.INFO, "RootLayout is initiated.");
-
-			showTaskBomberOverview();
-			logger.log(Level.INFO, "The view is generated.");
-		} catch (Exception e) {
-			System.out.println("cannot initiate the view.");
-		}
-	}
-
-	 
-	/**
-	 * Initializes the root layout.
-	 */
-	public void initRootLayout() {
-		try {
-			// Load root layout from fxml file.
-			FXMLLoader loader = new FXMLLoader();
-			loader.setLocation(MainApp.class.getResource("RootLayout.fxml"));
-			rootLayout = (BorderPane) loader.load();
-
-			// Show the scene containing the root layout.
-			Scene scene = new Scene(rootLayout);
-			primaryStage.setScene(scene);
-			primaryStage.show();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
-	}
-
-	 
-	/**
-	 * Shows the person overview inside the root layout.
-	 */
-	public void showTaskBomberOverview() {
-		try {
-			// Load person overview.
+			
 			FXMLLoader loader = new FXMLLoader();
 			loader.setLocation(MainApp.class.getResource("TaskView.fxml"));
 			AnchorPane taskBomberOverview = (AnchorPane) loader.load();
 
 			// Set person overview into the center of root layout.
 			rootLayout.setCenter(taskBomberOverview);
-
 			TaskViewController controller = loader.getController();
-			
-			controller.setMainApp(this);
 
-		} catch (IOException e) {
-			e.printStackTrace();
+			controller.setMainApp(this);
+			logger.log(Level.INFO, "RootLayout is initiated.");
+			
+			Scene scene = new Scene(rootLayout);
+			primaryStage.setScene(scene);
+			primaryStage.show();
+			
+			logger.log(Level.INFO, "The view is generated.");
+
+		} catch (Exception e) {
+			logger.log(Level.SEVERE, null, e);
 		}
 	}
+	
+	public void basicHelp(){
+		Image image = new Image("Basic.PNG");
+        ImageView imageView = new ImageView();
+        imageView.setImage(image);
+        imageView.setPreserveRatio(true);
+        
+        ScrollPane secondaryLayout = new ScrollPane();
+        secondaryLayout.setContent(imageView);
+         
+        Scene secondScene = new Scene(secondaryLayout, 750, 700);
+        Stage secondStage = new Stage();
+        secondStage.setTitle("Help");
+        secondStage.setScene(secondScene);
+         
+        //Set position of second window, related to primary window.
+        secondStage.setX(primaryStage.getX() + 250);
+        secondStage.setY(primaryStage.getY() + 100);
 
-	 
+        secondStage.show();
+	}
+	
 	/**
 	 * Returns the main stage.
 	 * 
@@ -103,7 +120,6 @@ public class MainApp extends Application {
 		return primaryStage;
 	}
 
-	 
 	public static void main(String[] args) {
 		launch(args);
 	}
@@ -113,6 +129,9 @@ public class MainApp extends Application {
 ###### src\gui\TaskViewController.java
 ``` java
 public class TaskViewController {
+
+	private final KeyCombination crtlZ = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
+	private final KeyCombination crtlY = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
 
 	@FXML
 	private TextField txtCommandInput;
@@ -163,26 +182,60 @@ public class TaskViewController {
 
 	public void enterCommand(KeyEvent event) {
 		if (event.getCode() == KeyCode.ENTER) {
-			if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
-				taskTableView.setItems(mainApp.getTaskData());
+			System.out.println("I am Here");
+			enterKeyEvent();
+		} else if (event.getCode() == KeyCode.UP) {
+			upKeyEvent();
+		} else if (event.getCode() == KeyCode.DOWN) {
+			downKeyEvent();
+		} else if (crtlZ.match(event)) {
+			controlZKeyEvent();
+		} else if (crtlY.match(event)) {
+			controlYKeyEvent();
+		}
+	}
+
+
+	private void controlYKeyEvent() {
+		execute("redo");
+	}
+
+	private void controlZKeyEvent() {
+		execute("undo");
+	}
+
+	private void downKeyEvent() {
+		// TODO Auto-generated method stub
+
+	}
+
+	private void upKeyEvent() {
+		// TODO Auto-generated method stub
+
+	}
+
+	private void enterKeyEvent() {
+		if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
+			taskTableView.setItems(mainApp.getTaskData());
+		} else {
+			if (txtCommandInput.getText().equalsIgnoreCase("help")) {
+				mainApp.basicHelp();
 			} else {
 				String input = txtCommandInput.getText().trim();
-				// logger.log(Level.INFO, "Here comes a command.");
-				CommandPackage cmdPack = cmdParser.getCommandPackage(input);
-				// logger.log(Level.INFO, "CommandParser parses the command.");
-				assert (cmdPack != null);
-				// String feedback =
-				logic.executeCommand(cmdPack);
-//				if (feedback.compareToIgnoreCase("help") == 0) {
-//
-//				}
-				// logger.log(Level.INFO, "Logic executes the command.");
-				// every time when user click "enter", redisplay the task list
-				taskTableView.setItems(mainApp.getTaskData());
-				logger.log(Level.INFO, "Update the table view.");
-				txtCommandInput.clear();
+				logger.log(Level.INFO, "Here comes a command.");
+				execute(input);
 			}
 		}
+	}
+	
+	private void execute(String input){
+		CommandPackage cmdPack = cmdParser.getCommandPackage(input);
+		logger.log(Level.INFO, "CommandParser parses the command.");
+		assert (cmdPack != null);
+		logic.executeCommand(cmdPack);
+		taskTableView.setItems(mainApp.getTaskData());
+		logger.log(Level.INFO, "Update the table view.");
+		txtCommandInput.clear();
 	}
 
 	/**
@@ -197,7 +250,6 @@ public class TaskViewController {
 		logger.log(Level.INFO, "Set MainApp.");
 		// Add observable list data to the table
 		taskTableView.setItems(mainApp.getTaskData());
-		todayTasksView.setItems(mainApp.getTodayTasks());
 	}
 }
 ```
