--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -3,16 +3,27 @@
 ``` java
 public class PriorityTaskList {
     
-	private static ArrayList<Task> p1 = new ArrayList<Task>();
-	private static ArrayList<Task> p2 = new ArrayList<Task>();
-	private static ArrayList<Task> p3 = new ArrayList<Task>();
-	private static ArrayList<Task> p4 = new ArrayList<Task>();
+	private ArrayList<Task> p1 = new ArrayList<Task>();
+	private ArrayList<Task> p2 = new ArrayList<Task>();
+	private ArrayList<Task> p3 = new ArrayList<Task>();
+	private ArrayList<Task> p4 = new ArrayList<Task>();
+	private static PriorityTaskList priorityList = null;
 	
-	public PriorityTaskList() {
-		// TODO Auto-generated constructor stub
+	private PriorityTaskList(){
+		this.p1 = new ArrayList<Task>();
+		this.p2 = new ArrayList<Task>();
+		this.p3 = new ArrayList<Task>();
+		this.p4 = new ArrayList<Task>();
 	}
 	
-	public static void addToPL(Task t){
+	public static PriorityTaskList getInstance(){
+		if(priorityList == null){
+			priorityList = new PriorityTaskList();
+		}
+		return priorityList;
+	}
+	
+	public void addToPL(Task t){
 		if(t.getPriority() == null){
 			p4.add(t);
 		}else if(t.getPriority() == 1){
@@ -24,7 +35,7 @@ public class PriorityTaskList {
 		}
 	}
 	
-	public static void deleteFromPL(Task t){
+	public void deleteFromPL(Task t){
 	    if(t.getPriority() == null){
 	    	for (int i = 0; i<p4.size(); i++){
 				if(p4.get(i).getName().equalsIgnoreCase(t.getName())){
@@ -56,23 +67,23 @@ public class PriorityTaskList {
 		}
 	}
 	
-	public static void clear(){
+	public void clear(){
 		p1.clear();
 		p2.clear();
 		p3.clear();
 		p4.clear();
 	}
 
-	public static ArrayList<Task> getP1() {
+	public ArrayList<Task> getP1() {
 		return p1;
 	}
-	public static ArrayList<Task> getP2() {
+	public ArrayList<Task> getP2() {
 		return p2;
 	}
-	public static ArrayList<Task> getP3() {
+	public ArrayList<Task> getP3() {
 		return p3;
 	}
-	public static ArrayList<Task> getP4() {
+	public ArrayList<Task> getP4() {
 		return p4;
 	}
 
@@ -139,11 +150,11 @@ public class Searcher {
 	public ArrayList<Task> searchPriority(int priority){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(priority == 1){
-			result.addAll(PriorityTaskList.getP1());
+			result.addAll(PriorityTaskList.getInstance().getP1());
 		}else if(priority == 2){
-			result.addAll(PriorityTaskList.getP2());
+			result.addAll(PriorityTaskList.getInstance().getP2());
 		}else if(priority == 3){
-			result.addAll(PriorityTaskList.getP3());
+			result.addAll(PriorityTaskList.getInstance().getP3());
 		}
 		return result;
 	}
@@ -186,7 +197,7 @@ public class Searcher {
 		}
 		for(int j = 0; j < result2.size(); j++){
 		    t = result2.get(j);
-		    if((t.getEndTime().compareTo(start) > 0) && (t.getEndTime().compareTo(end) < 0)){
+		    if((t.getEndTime().compareTo(start) >= 0) && (t.getEndTime().compareTo(end) <= 0)){
 		    	result1.add(t);
 		    }
 		}
@@ -236,7 +247,8 @@ public class Searcher {
 public class SystemTest {
 
 	@Test
-	public void test() {
+	public void test1() {
+		//test: add, update, delete
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("add meeting 9-Oct");
 		LogicClass lg = LogicClass.getInstance();
@@ -249,8 +261,56 @@ public class SystemTest {
 		cmd = cmp.getCommandPackage("delete party");
 		lg.executeCommand(cmd);
 		assertEquals(LogicClass.getTaskList().size(), size - 1);
-		/*assertEquals(LogicClass.getInstance(null).delete("meeting").getName(), "meeting");
-		cmd = cmp.getCommandPackage("")*/
+	}
+	
+	@Test
+	public void test2() {
+		//test: clear, undo, redo
+		CommandParser cmp = new CommandParser();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		LogicClass lg = LogicClass.getInstance();
+		lg.executeCommand(cmd);
+		int size = LogicClass.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("add meeting 9-Oct");
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lg.executeCommand(cmd);
+		size = LogicClass.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("redo");
+		lg.executeCommand(cmd);
+		size = LogicClass.getTaskList().size();
+		assertEquals(1, size);
+	}
+	
+	@Test
+	public void test3() {
+		//test: sort, search
+		CommandParser cmp = new CommandParser();
+		CommandPackage cmd = cmp.getCommandPackage("add party 8-Oct #3");
+		LogicClass lg = LogicClass.getInstance();
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting 9-Oct #2");
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("sort name");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("sort time");
+		lg.executeCommand(cmd);
+		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("sort priority");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search meeting");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search 8-Oct");
+		lg.executeCommand(cmd);
+		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search #2");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());	
 	}
 
 }
@@ -419,15 +479,129 @@ public class TimeLine {
 public class TimeSearchTest {
 
 	@Test
-	public void test() {
+	public void test1() {
+		//test: event task 
 		Task a = new Task("A");
 		a.setStartTime(new DateTime(2014, 1, 1, 1, 1));
 		a.setEndTime(new DateTime(2014, 1, 2, 1, 1));
 		Task b = new Task("B");
 		b.setStartTime(new DateTime(2014, 2, 1, 1, 1));
+		b.setEndTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
 		TimeLine.getInstance().addToTL(a);
 		TimeLine.getInstance().addToTL(b);
-		assertEquals(Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName(), "A");
+		assertEquals("A",Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName());
+	}
+
+	@Test
+	public void test2() {
+		//test: deadline Task in range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 1, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).get(0).getName());
+	}
+	
+	public void test3() {
+		//test: deadline Task out of range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 2, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).size());
+	}
+
+	@Test
+	public void test4() {
+		//test: task with only start time which is before the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+
+	@Test
+	public void test5() {
+		//test: task with only start time which is after the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+	
+	@Test
+	public void test6() {
+		//test: task with only start time which is after the end time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 3, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
+	}
+	
+	@Test
+	public void test7() {
+		//test: floating task
+		Task g = new Task("G");
+		g.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		g.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task h = new Task("H");
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(g);
+		TimeLine.getInstance().addToTL(h);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
+	}
+}
+```
+###### src\storage\ReadAndWriteTest.java
+``` java
+public class ReadAndWriteTest {
+
+	@Test
+	public void test() {
+		Storage storage = Storage.getInstance();
+		ArrayList<Task> a = new ArrayList<Task>();
+		for(int i = 1; i < 10; i++){
+			Task t1 = new Task("test" + i);
+			t1.setStartTime(new DateTime(2016,i,1,1,1));
+			t1.setEndTime(new DateTime(2016,i+1,1,1,1));
+			t1.setPriority("1");
+			a.add(t1);
+		}
+		storage.read();
+		storage.write(a);
+		ArrayList<Task> b = storage.read();
+		System.out.println(a);
+		System.out.println(b);
+		for(int i = 0; i < 9; i++){
+			assertEquals(a.get(i).getName(), b.get(i).getName());
+			assertEquals(a.get(i).getStartTime(), b.get(i).getStartTime());
+			assertEquals(a.get(i).getEndTime(), b.get(i).getEndTime());
+			assertEquals(a.get(i).getPriority(), b.get(i).getPriority());
+		}
 	}
 
 }
@@ -438,11 +612,16 @@ public class SetPathTest {
 
 	@Test
 	public void test() {
-		ArrayList<Task> a = Storage.getInstance().read();
-		Storage.getInstance().setPath("TaskBomber.txt");
+		
+		ArrayList<Task> a = new ArrayList<Task>();
+		Task t = new Task("test");
+		a.add(t);
+		Storage.getInstance().write(a);
+		Storage.getInstance().setPath("Task_Bomber.txt");
+		ArrayList<Task> b = Storage.getInstance().read();
 		System.out.println(a);
-		System.out.println(Storage.getInstance().read());
-		assertEquals(Storage.getInstance().read().get(2).getName(), a.get(2).getName());
+		System.out.println(b);
+		assertEquals(b.get(0).getName(), a.get(0).getName());
 		
 	}
 
@@ -453,7 +632,7 @@ public class SetPathTest {
 public class Storage {
 
 	private static File filePath = new File("filePath");
-	private static File userFile;
+	private static File userFile = new File("taskBomber.txt");
 	private static Storage storage = null;
 	
 	private Storage(){
